--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Code Camp Quest</title>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-  <body>
+  <!-- Primary Meta Tags -->
+  <title>CodeCampQuest - a mini-simulation game built with React</title>
+  <meta name="title" content="CodeCampQuest - a mini-simulation game built with React">
+  <meta name="description"
+    content="Follow a student developer as they attempt to complete their coding assignments before the days end while juggling the needs of their adorable dog!">
 
-    <div id="root"></div>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://code-camp-quest.netlify.app/">
+  <meta property="og:title" content="CodeCampQuest - a mini-simulation game built with React">
+  <meta property="og:description"
+    content="Follow a student developer as they attempt to complete their coding assignments before the days end while juggling the needs of their adorable dog!">
+  <meta property="og:image" content="%PUBLIC_URL%/ccq.PNG">
 
-  </body>
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://code-camp-quest.netlify.app/">
+  <meta property="twitter:title" content="CodeCampQuest - a mini-simulation game built with React">
+  <meta property="twitter:description"
+    content="Follow a student developer as they attempt to complete their coding assignments before the days end while juggling the needs of their adorable dog!">
+  <meta property="twitter:image" content="%PUBLIC_URL%/ccq.PNG">
+</head>
+
+<body>
+
+  <div id="root"></div>
+
+</body>
 
 </html>
