more tag tweeks

--- a/public/index.html
+++ b/public/index.html
@@ -20,17 +20,15 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://code-camp-quest.netlify.app/">
   <meta property="og:title" content="CodeCampQuest - a mini-simulation game built with React">
-  <meta property="og:description"
-    content="Follow a student developer as they attempt to complete their coding assignments before the days end while juggling the needs of their adorable dog!">
-  <meta property="og:image" content="%PUBLIC_URL%/ccq.PNG">
+  <meta property="og:description" content="Follow a student developer as they attempt to complete their coding assignments before the days end while juggling the needs of their adorable dog!">
+  <meta property="og:image" content="https://code-camp-quest.netlify.app/ccq.PNG">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://code-camp-quest.netlify.app/">
   <meta property="twitter:title" content="CodeCampQuest - a mini-simulation game built with React">
-  <meta property="twitter:description"
-    content="Follow a student developer as they attempt to complete their coding assignments before the days end while juggling the needs of their adorable dog!">
-  <meta property="twitter:image" content="%PUBLIC_URL%/ccq.PNG">
+  <meta property="twitter:description" content="Follow a student developer as they attempt to complete their coding assignments before the days end while juggling the needs of their adorable dog!">
+  <meta property="twitter:image" content="https://code-camp-quest.netlify.app/ccq.PNG">
 </head>
 
 <body>
